# dd-trace-php

./: Makefile  config.m4
.circleci/: config.yml
dockerfiles/services/: Makefile
dockerfiles/services/request-replayer/: Dockerfile
ext/DDProf/: CMakeLists.txt
ext/DDProf/include/ddprof/: chrono.hh  collector.hh  event.hh  exporter.hh  fixed_alloc.hh  profiler.hh  recorder.hh  scheduler.hh  service.hh  string_table.hh
ext/DDProf/test/: CMakeLists.txt  exporter.cc  fixed_alloc.cc  periodic_service.cc  scheduler.cc  string_table.cc
ext/php7/: ddtrace.c  ddtrace.h
ext/php7/php7/: engine_hooks.c
src/ext/: coms.c  ddtrace.c
src/ext/php7/: ddprof.cc  ddprof.hh  profiler.cc  sampler.c  sampler.h  serializer.c  stack_collector.cc  stack_collector.hh
